test/org/midica/testfiles/failing/sk-in-root-lvl.midica
INCLUDE inc/instruments.midica

SOFT_KARAOKE
END
